Responsive Skill Section

--- a/css/styles.css
+++ b/css/styles.css
@@ -194,3 +194,13 @@ border-bottom: 2px solid rgb(68, 67, 67);
   font-size: 1rem;
 }
 
+@media only screen and (max-width: 75em) {
+  .skills__secondary {
+    grid-template-rows: repeat(3, 1fr);
+    grid-template-columns: 1fr;
+    
+  }
+  .skill__container {
+    margin-bottom: 3rem;
+  }
+}
