--- a/styles.css
+++ b/styles.css
@@ -10,22 +10,25 @@ body{
     font-size: 2.5rem;
 }
 #nav{
-  background: #d5daeb;
+  background: #9ecca4;
   display: grid;
   grid-template-columns: 1fr 1fr;
+  position: fixed;
+  z-index:20 ;
+  width: 100%;
 
 }
-.name-nav{
+#name-nav{
   font-family: 'Montserrat-bold', sans-serif;
   text-align: center;
 color: white;
-background: #1c1259;
-padding-top: 1.5rem;
+background: #1f441e;
+padding-top: 1rem;
   font-size: 1.5rem;
 
 }
 .navbar{
-  background: #d5daeb;
+  background: #9ecca4;
   font-family: 'Montserrat-bold', sans-serif;
   color: black;
   padding: 0;
@@ -33,11 +36,29 @@ padding-top: 1.5rem;
   border: 0;
   list-style-type:none;
   font-size: 1rem;
-  float: right;
+  position: fixed;
+  z-index: 1;
 }
-
+.nav-link{
+  color: black;
+}
+.nav-link:hover{
+  color: #9b3675;
+}
+.myVideo {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  min-width: 100%;
+  min-height: 100%;
+}
 #intro{
-  background: #fcd307;
+  position: relative;
+  bottom: 0;
+  background: rgba(0, 0, 0, 0.5);
+  color: #f1f1f1;
+  width: 100%;
+  padding-top: 20%
   text-align: center;
   padding: 15%;
   letter-spacing: .5rem;
@@ -46,11 +67,16 @@ padding-top: 1.5rem;
 }
 .hero{
   font-family: 'Bebas Neue', cursive;
+  padding: 10%;
+  text-align: center;
   /* /animation: moveInRght 3s; */
 }
 
 .hero__sub{
   /* animation: moveInLeft 4s; */
+  padding: .5%;
+
+  text-align: center;
 }
 
 #featured{
@@ -115,7 +141,7 @@ backface-visibility: hidden;
 
 footer{
   text-align: center;
-  background: #1c1259;
+  background: #1f441e;
   color: white;
 }
 .img-pro{
@@ -159,7 +185,7 @@ footer{
   margin: 0.8rem 2.5rem;
 }
 #skill {
-  background-image: linear-gradient(60deg, #fcd307 0%,  #fcd307 50%, #1c1259 50%);
+  background-image: linear-gradient(60deg, #cee6b4 0%,  #cee6b4 50%, #1f441e 50%);
   padding: 2rem;
 }
 
@@ -180,7 +206,7 @@ footer{
   padding: 1rem;
 
   position: relative;
-  background-image: linear-gradient(180deg, #fcd307 0%,  #fcd307 50%, #1c1259 50%);
+  background-image: linear-gradient(180deg, #cee6b4 0%,  #cee6b4 50%, #1f441e 50%);
 }
 
 .skill__cont {
@@ -193,7 +219,7 @@ footer{
   transform: translate(-50%, -50%);
   top: 0%;
   left: 50%;
-  background-color: #ffc7c7;
+  background-color: #9b3675;
   padding: 0.6rem;
   border-radius: 50%;
 }
