--- a/styles.css
+++ b/styles.css
@@ -8,39 +8,50 @@ hidden*,
 
 body{
     font-size: 2.5rem;
+    background-color: #181818;
 }
 #nav{
-  background: #9ecca4;
+  /* background: #9ecca4; */
   display: grid;
   grid-template-columns: 1fr 1fr;
-  position: fixed;
+  position: relative;
   z-index:20 ;
   width: 100%;
+  background: rgba( 255, 255, 255, 0.25 );
+box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+backdrop-filter: blur( 4px );
+-webkit-backdrop-filter: blur( 4px );
+
+border: 1px solid rgba( 255, 255, 255, 0.18 );
 
 }
 #name-nav{
   font-family: 'Montserrat-bold', sans-serif;
-  text-align: center;
-color: white;
-background: #1f441e;
+  text-align: left;
+color: #303030;
+/* background: #1f441e; */
 padding-top: 1rem;
+padding-left: 4rem;
   font-size: 1.5rem;
+
 
 }
 .navbar{
-  background: #9ecca4;
+  /* background: #9ecca4; */
   font-family: 'Montserrat-bold', sans-serif;
-  color: black;
+  color: #303030;
   padding: 0;
   margin: 0;
   border: 0;
   list-style-type:none;
   font-size: 1rem;
-  position: fixed;
+  position: relative;
   z-index: 1;
+  text-align: right;
+  padding-left: 5rem;
 }
 .nav-link{
-  color: black;
+  color: #303030;
 }
 .nav-link:hover{
   color: #9b3675;
@@ -58,16 +69,16 @@ padding-top: 1rem;
   background: rgba(0, 0, 0, 0.5);
   color: #f1f1f1;
   width: 100%;
-  padding-top: 20%
+  padding-top: 5%
   text-align: center;
   padding: 15%;
   letter-spacing: .5rem;
   backface-visibility: hidden;
-  height: 100vh;
+  height: 90vh;
 }
 .hero{
   font-family: 'Bebas Neue', cursive;
-  padding: 10%;
+  padding: 5%;
   text-align: center;
   /* /animation: moveInRght 3s; */
 }
@@ -84,7 +95,8 @@ padding-top: 1rem;
   text-align: center;
   font-size: 1.5rem;
   backface-visibility: hidden;
-  height: 100vh;
+  height: 90vh;
+
 }
 .feat-des {
   padding-left: 3rem;
@@ -101,6 +113,7 @@ padding-top: 1rem;
 .feat-img {
   padding-left: 3rem;
   text-align: center;
+  border-radius: 25%;
 }
 .wo{
   font-family: "Montserrat", sans-serif;
@@ -112,12 +125,14 @@ p, h1, h2{
   font-family: 'Montserrat', sans-serif;
 }
 #skills{
-  background: #ee4266;
+
   padding: 5% ;
-  color: black;
+
     font-size: 2.5rem;
 backface-visibility: hidden;
-  height: 100vh;
+height: 90vh;
+color: white;
+
 
 
 }
@@ -133,13 +148,17 @@ backface-visibility: hidden;
   text-align: center;
   font-family: 'Bebas Neue', cursive;
     font-size: 3.5rem;
+
+
 }
 #about-me{
   padding: 5% 5%;
   text-align: center;
     font-size: 1.2rem
     backface-visibility: hidden;
-  height: 100vh;
+    height: 90vh;
+
+
 }
 
 footer{
@@ -178,7 +197,7 @@ footer{
 
 
 ::selection {
-  background-color: #262626;
+  background-color: #252525;
   color: #ffffff;
 }
 
@@ -193,7 +212,8 @@ footer{
 }
 
 .skills__main {
-  background-color: #fff;
+  background-color: #252525;
+  color: white;
   padding: 1.7rem;
 }
 .skills__secondary {
@@ -213,7 +233,8 @@ footer{
 }
 
 .skill__cont {
-  background-color: #fff;
+  background-color: #252525;
+  color: white;
   padding: 2rem;
 }
 
